--- a/views/_layout.html
+++ b/views/_layout.html
@@ -27,7 +27,7 @@
 		<div id='cssmenu'>
 			<ul>
 			   <li><a href='/'><span>Home</span></a></li>
-			   <li><a href='vendas'><span>Vendas</span></a>
+			   <li><a href='/vendas'><span>Vendas</span></a>
 			   	<ul>
 			   		<li><a href='maquinas/manitou'><span>Manitou</span></a></li>
 			   		<li><a href='maquinas/ammann'><span>Ammann</span></a></li>
@@ -35,13 +35,12 @@
 			   		<li><a href='maquinas/kalmar'><span>Kalmar</span></a></li>
 			   		<li><a href='maquinas/compair'><span>Compair</span></a></li>
 			   		<li><a href='maquinas/fassi'><span>Fassi</span></a></li>
-			   		<li><a href='maquinas/manitou'><span>Manitou</span></a></li>
 			   	</ul>
 			   </li>
 			   <li><a href='#'><span>Aluguer</span></a></li>
 			   <li><a href='#'><span>Assistência</span></a></li>
 			   <li><a href='#'><span>Peças</span></a></li>
-			   <li class='last'><a href='contactos'><span>Contactos</span></a></li>
+			   <li class='last'><a href='/contactos'><span>Contactos</span></a></li>
 			</ul>
 		</div>
 	</nav>
