--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,6 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 
+div#container{
+  width: 1000px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 #partners{
   text-align: center;
 }
