--- a/views/_layout.html
+++ b/views/_layout.html
@@ -14,39 +14,40 @@
 
 </head>
 <body>
-	<div id='partners'>
-		<img src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/'></img>
-		<img src='/img/partners/ammann.jpg' link='http://www.ammann-group.com/'></img>
-		<img src='/img/partners/jungheinrich.jpg' link='http://www.jungheinrich.com/'></img>
-		<img src='/img/partners/kalmar.jpg' link='http://www.cargotec.com/'></img>
-		<img src='/img/partners/compair.jpg' link='http://www.compair.pt/'></img>
-		<img src='/img/partners/fassi.jpg' link='http://www.fassi.com/'></img>
-	</div>
-	<nav>
-		<img id='comp' src="/img/partners/maqman.png"></img>
-		<div id='cssmenu'>
-			<ul>
-			   <li><a href='/'><span>Home</span></a></li>
-			   <li><a href='/vendas'><span>Vendas</span></a>
-			   	<ul>
-			   		<li><a href='maquinas/manitou'><span>Manitou</span></a></li>
-			   		<li><a href='maquinas/ammann'><span>Ammann</span></a></li>
-			   		<li><a href='maquinas/jungheinrich'><span>Jungheinrich</span></a></li>
-			   		<li><a href='maquinas/kalmar'><span>Kalmar</span></a></li>
-			   		<li><a href='maquinas/compair'><span>Compair</span></a></li>
-			   		<li><a href='maquinas/fassi'><span>Fassi</span></a></li>
-			   	</ul>
-			   </li>
-			   <li><a href='#'><span>Aluguer</span></a></li>
-			   <li><a href='#'><span>Assistência</span></a></li>
-			   <li><a href='#'><span>Peças</span></a></li>
-			   <li class='last'><a href='/contactos'><span>Contactos</span></a></li>
-			</ul>
+	<div id='container'>
+		<div id='partners'>
+			<img src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/'></img>
+			<img src='/img/partners/ammann.jpg' link='http://www.ammann-group.com/'></img>
+			<img src='/img/partners/jungheinrich.jpg' link='http://www.jungheinrich.com/'></img>
+			<img src='/img/partners/kalmar.jpg' link='http://www.cargotec.com/'></img>
+			<img src='/img/partners/compair.jpg' link='http://www.compair.pt/'></img>
+			<img src='/img/partners/fassi.jpg' link='http://www.fassi.com/'></img>
 		</div>
-	</nav>
+		<nav>
+			<img id='comp' src="/img/partners/maqman.png"></img>
+			<div id='cssmenu'>
+				<ul>
+				   <li><a href='/'><span>Home</span></a></li>
+				   <li><a href='/vendas'><span>Vendas</span></a>
+				   	<ul>
+				   		<li><a href='maquinas/manitou'><span>Manitou</span></a></li>
+				   		<li><a href='maquinas/ammann'><span>Ammann</span></a></li>
+				   		<li><a href='maquinas/jungheinrich'><span>Jungheinrich</span></a></li>
+				   		<li><a href='maquinas/kalmar'><span>Kalmar</span></a></li>
+				   		<li><a href='maquinas/compair'><span>Compair</span></a></li>
+				   		<li><a href='maquinas/fassi'><span>Fassi</span></a></li>
+				   	</ul>
+				   </li>
+				   <li><a href='#'><span>Aluguer</span></a></li>
+				   <li><a href='#'><span>Assistência</span></a></li>
+				   <li><a href='#'><span>Peças</span></a></li>
+				   <li class='last'><a href='/contactos'><span>Contactos</span></a></li>
+				</ul>
+			</div>
+		</nav>
 
-    <section>@{body}</section>
-    
+	    <section>@{body}</section>
+    </div>
     <footer>
         <div id="news" link="http://www.portalangop.co.ao/angola/pt_pt/rss/c3ff3006-90d1-4f80-839b-6fe7b672c62e.xml">
 			<h2>Economia</h2>
