[ADDED] forma expor maquinas atravez da marca

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -30,7 +30,7 @@
 				   <li><a href='/'><span>Home</span></a></li>
 				   <li><a href='/vendas'><span>Vendas</span></a>
 				   	<ul>
-				   		<li><a href='maquinas/manitou'><span>Manitou</span></a></li>
+				   		<li><a href='marca/manitou'><span>Manitou</span></a></li>
 				   		<li><a href='maquinas/ammann'><span>Ammann</span></a></li>
 				   		<li><a href='maquinas/jungheinrich'><span>Jungheinrich</span></a></li>
 				   		<li><a href='maquinas/kalmar'><span>Kalmar</span></a></li>
@@ -46,7 +46,7 @@
 			</div>
 		</nav>
 
-	    <section>@{body}</section>
+	    <section id="body">@{body}</section>
     </div>
     <footer>
         <div id="news" link="http://www.portalangop.co.ao/angola/pt_pt/rss/c3ff3006-90d1-4f80-839b-6fe7b672c62e.xml">
