[ADDED] JCarrousel flexisel.js added to show a list of machines [ADDED] three Machines to manitou.html

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -10,6 +10,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<link rel='shortcut icon' href='/img/favicon.ico' type='image/x-icon'>
 	<link rel='icon' href='/img/favicon.ico' type='image/x-icon'>
+	<script type='text/javascript'src="/js/lib/jquery.flexisel.js"></script>
     @{head}
 
 </head>
@@ -24,18 +25,19 @@
 			<img src='/img/partners/fassi.jpg' link='http://www.fassi.com/'></img>
 		</div>
 		<nav>
+			<a href='/'>
 			<img id='comp' src="/img/partners/maqman.png"></img>
+			</a>
 			<div id='cssmenu'>
 				<ul>
-				   <li><a href='/'><span>Home</span></a></li>
 				   <li><a href='/vendas'><span>Vendas</span></a>
 				   	<ul>
 				   		<li><a href='marca/manitou'><span>Manitou</span></a></li>
-				   		<li><a href='maquinas/ammann'><span>Ammann</span></a></li>
-				   		<li><a href='maquinas/jungheinrich'><span>Jungheinrich</span></a></li>
-				   		<li><a href='maquinas/kalmar'><span>Kalmar</span></a></li>
-				   		<li><a href='maquinas/compair'><span>Compair</span></a></li>
-				   		<li><a href='maquinas/fassi'><span>Fassi</span></a></li>
+				   		<li><a href='marca/ammann'><span>Ammann</span></a></li>
+				   		<li><a href='marca/jungheinrich'><span>Jungheinrich</span></a></li>
+				   		<li><a href='marca/kalmar'><span>Kalmar</span></a></li>
+				   		<li><a href='marca/compair'><span>Compair</span></a></li>
+				   		<li><a href='marca/fassi'><span>Fassi</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='#'><span>Aluguer</span></a></li>
