[FIXED] Images to machines changed to .png [MODIFIED] Showing partners on carousel too

--- a/public/css/lib/flexisel.css
+++ b/public/css/lib/flexisel.css
@@ -10,6 +10,7 @@ display:none;
 .nbs-flexisel-container {
     position:relative;
     max-width:100%;
+    display: inline-block;
 }
 .nbs-flexisel-ul {
     position:relative;
