--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -7,14 +7,14 @@ div#container{
   margin-right:auto;
 }
 
-#partners{
+/*#partners{
   text-align: center;
 }
 #partners img{
   border:2px solid white;
   vertical-align: middle;
 
-}
+}*/
 img#comp{
   position: absolute;
   background-color: white;
@@ -100,6 +100,7 @@ img#comp{
   opacity: 1;
   top: 65px;
   visibility: visible;
+  z-index: 10;
 }
 #cssmenu > ul > li > ul:before {
   content: '';
