--- a/public/css/marca.css
+++ b/public/css/marca.css
@@ -14,6 +14,8 @@
 	display: block;
 }*/
 
-ul#slideMaq > li > a > span{
+ul#slideMaq > li > span{
 	display: block;
+	font-family: sans-serif;
+	font-size: 11px;
 }
