--- a/views/brand/manitou.html
+++ b/views/brand/manitou.html
@@ -10,29 +10,29 @@
 </head>
 <body>
 
-	<img src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/'></img>
+	<img class ='ltb' src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/'></img>
 
 	<ul id='slideMaq'>
-		<li><a href="maquina/MT-1235">
-			<img id='machine' src='/img/machines/MT-1235-small.jpg'/>
+		<li class ='ltp' link='maquina/MT-1235'>
+			<img class='machine' src='/img/machines/MT-1235-small.jpg'/>
 			<span>MT 1235 H</span>
-		</a></li>
-		<li><a href="maquina/MT-1440">
-			<img id='machine' src='/img/machines/MT-1440-small.jpg'/>
+		</li>
+		<li class ='ltp' link='maquina/MT-1440'>
+			<img class='machine' src='/img/machines/MT-1440-small.png'/>
 			<span>MT 1440 H</span>
-		</a></li>
-		<li><a href="maquina/MT-1740">
-			<img id='machine' src='/img/machines/MT-1740-small.jpg'/>
+		</li>
+		<li class ='ltp' link='maquina/MT-1740'>
+			<img class='machine' src='/img/machines/MT-1740-small.png'/>
 			<span>MT 1740 H</span>
-		</a></li>
-		<li><a href="maquina/MT-1740">
-			<img id='machine' src='/img/machines/MT-1740-small.jpg'/>
+		</li>
+		<li class ='ltp' link='maquina/MT-1740'>
+			<img class='machine' src='/img/machines/MT-1740-small.png'/>
 			<span>MT 1740 H</span>
-		</a></li>
-		<li><a href="maquina/MT-1740">
-			<img id='machine' src='/img/machines/MT-1740-small.jpg'/>
+		</li>
+		<li class ='ltp' link='maquina/MT-1740'>
+			<img class='machine' src='/img/machines/MT-1740-small.png'/>
 			<span>MT 1740 H</span>
-		</a></li>
+		</li>
 	</ul>
 	<a href="http://www.pt.manitou.com/manitou/pt/market/3-industry"> Estes e mais modelos aqui</a>
 	<script type="text/javascript">
