--- a/views/_layout.html
+++ b/views/_layout.html
@@ -61,12 +61,12 @@
 				<ul>
 				   <li><a href='/vendas'><span>Vendas</span></a>
 				   	<ul>
-				   		<li><a href='marca/manitou'><span>Manitou</span></a></li>
-				   		<li><a href='marca/ammann'><span>Ammann</span></a></li>
-				   		<li><a href='marca/jungheinrich'><span>Jungheinrich</span></a></li>
-				   		<li><a href='marca/kalmar'><span>Kalmar</span></a></li>
-				   		<li><a href='marca/compair'><span>Compair</span></a></li>
-				   		<li><a href='marca/fassi'><span>Fassi</span></a></li>
+				   		<li><a href='/marca/manitou'><span>Manitou</span></a></li>
+				   		<li><a href='/marca/ammann'><span>Ammann</span></a></li>
+				   		<li><a href='/marca/jungheinrich'><span>Jungheinrich</span></a></li>
+				   		<li><a href='/marca/kalmar'><span>Kalmar</span></a></li>
+				   		<li><a href='/marca/compair'><span>Compair</span></a></li>
+				   		<li><a href='/marca/fassi'><span>Fassi</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='#'><span>Aluguer</span></a></li>
