--- a/views/brand/manitou.html
+++ b/views/brand/manitou.html
@@ -13,23 +13,23 @@
 	<img class ='ltb' src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/'></img>
 
 	<ul id='slideMaq'>
-		<li class ='ltp' link='maquina/MT-1235'>
+		<li class ='ltp' link='/maquina/MT-1235'>
 			<img class='machine' src='/img/machines/MT-1235-small.jpg'/>
 			<span>MT 1235 H</span>
 		</li>
-		<li class ='ltp' link='maquina/MT-1440'>
+		<li class ='ltp' link='/maquina/MT-1440'>
 			<img class='machine' src='/img/machines/MT-1440-small.png'/>
 			<span>MT 1440 H</span>
 		</li>
-		<li class ='ltp' link='maquina/MT-1740'>
+		<li class ='ltp' link='/maquina/MT-1740'>
 			<img class='machine' src='/img/machines/MT-1740-small.png'/>
 			<span>MT 1740 H</span>
 		</li>
-		<li class ='ltp' link='maquina/MT-1740'>
+		<li class ='ltp' link='/maquina/MT-1740'>
 			<img class='machine' src='/img/machines/MT-1740-small.png'/>
 			<span>MT 1740 H</span>
 		</li>
-		<li class ='ltp' link='maquina/MT-1740'>
+		<li class ='ltp' link='/maquina/MT-1740'>
 			<img class='machine' src='/img/machines/MT-1740-small.png'/>
 			<span>MT 1740 H</span>
 		</li>
@@ -40,7 +40,7 @@
 		$(window).on("load",function(){
 			$('#slideMaq').flexisel({
 				clone: false,
-				visibleItems: 3
+				visibleItems: 5
 			});
 		});
 	</script>
