[ADDED] new manitou model (MI 25/30/35) [LOGICFIX] removed arrows from partners carousel and color change on hover of cssmenu spans [BUGFIX] slider.js double timer fixed

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -66,7 +66,7 @@ img#comp{
   -o-transition: color .15s;
   transition: color .15s;
 }
-#cssmenu > ul > li > a:hover {
+#cssmenu > ul > li > a > span:hover {
   color: #fae500;
 }
 
@@ -211,4 +211,12 @@ section#body{
 
 .noshow{
     display:none;
+}
+
+.ltb{
+  cursor: pointer;
+  color:#999999;
+}
+span:hover{
+  color:#000000;
 }
