--- a/views/_layout.html
+++ b/views/_layout.html
@@ -10,7 +10,9 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<link rel='shortcut icon' href='/img/favicon.ico' type='image/x-icon'>
 	<link rel='icon' href='/img/favicon.ico' type='image/x-icon'>
+	<title>MAQMAN</title>
 	<link rel="stylesheet" href="/css/lib/flexisel.css"/>
+	<link rel="stylesheet" href="/css/lib/flexiselModified.css"/>
 	<script type='text/javascript'src="/js/lib/jquery.flexisel.js"></script>
     @{head}
 
@@ -43,6 +45,7 @@
 
 		$(window).on("load",function(){
 			$('#partners').flexisel({
+				css: "flexiselM",
 				clone: true,
 				visibleItems: 5,
 				animationSpeed: 1000,
