[ADDED] Mustang on partner and a Mustang machine Must-2041.html

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -38,7 +38,15 @@
 			<li>
 				<img class ='ltb' src='/img/partners/fassi.jpg' link='http://www.fassi.com/'></img>
 			</li>
-			
+			<li>
+				<img class ='ltb' src='/img/partners/galtrailer.png' link='http://www.galtrailer.pt/'></img>
+			</li>
+			<li>
+				<img class ='ltb' src='/img/partners/silla.jpg' link='http://www.sillaitaly.com/'></img>
+			</li>
+			<li>
+				<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/'></img>
+			</li>
 		</ul>
 
 	<script type="text/javascript">
