--- a/views/brand/manitou.html
+++ b/views/brand/manitou.html
@@ -23,15 +23,15 @@
 		</li>
 		<li class ='ltp' link='/maquina/MT-1235'>
 			<img class='machine' src='/img/machines/MT-1235-small.jpg'/>
-			<span>MT 1235 H</span>
+			<span>MT 1235</span>
 		</li>
 		<li class ='ltp' link='/maquina/MT-1440'>
 			<img class='machine' src='/img/machines/MT-1440-small.png'/>
-			<span>MT 1440 H</span>
+			<span>MT 1440</span>
 		</li>
 		<li class ='ltp' link='/maquina/MT-1740'>
 			<img class='machine' src='/img/machines/MT-1740-small.png'/>
-			<span>MT 1740 H</span>
+			<span>MT 1740</span>
 		</li>
 	</ul>
 	<script type="text/javascript">
