[ADDED] Mustang main and machines [REMOVED] MT 1740 manitou machine and unite his specifications with MT 1440 manitou machine

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -78,6 +78,7 @@
 				   		<li><a href='/marca/kalmar'><span>Kalmar</span></a></li>
 				   		<li><a href='/marca/compair'><span>Compair</span></a></li>
 				   		<li><a href='/marca/fassi'><span>Fassi</span></a></li>
+				   		<li><a href='/marca/mustang'><span>Mustang</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='#'><span>Aluguer</span></a></li>
