--- a/views/machine/Must-2056.html
+++ b/views/machine/Must-2056.html
@@ -11,22 +11,22 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1>MT-1440/1740</h1>
-        	<h2>Empilhador Telescópico</h2>
+        	<h1><span class='ltb' link='http://www.mustangmfg.com/products/SkidSteer/2056SeriesII.aspx#../../Libraries/2056_Series_II_Photo_Gallery/2056_Series_II_Fill_Mixer.sflb.ashx'>Skid Steer Loadder 2056</span></h1>
+        	<h2>Minicarregador</h2>
         	<p/>
         	<table id='info'>
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Capacidade de Elevação</th>
-        				<th>Altura de Elevação</th>
+        				<th>Capacidade de Carga</th>
+        				<th>Potência de motor</th>
         				<th>Combustível</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-        				<td>4.000 kg</td>
-        				<td>14/17 m</td>
+        				<td>862 kg</td>
+        				<td>68 HP</td>
         				<td>Diesel</td>
         			</tr>
         		</tbody>
@@ -39,9 +39,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/MT-1440-1.jpg"/>
-				<img class="sp" src="/img/machines/MT-1440-2.jpg"/>
-				<img class="sp" src="/img/machines/MT-1440-3.jpg"/>
+				<img class="sp" src="/img/machines/Must-2056-1.jpg"/>
+				<img class="sp" src="/img/machines/Must-2056-2.jpg"/>
+				<img class="sp" src="/img/machines/Must-2056-3.jpg"/>
 			</div>
 		</div>
     </div>
