--- a/views/brand/mustang.html
+++ b/views/brand/mustang.html
@@ -11,23 +11,19 @@
 <body>
 
 	<div>
-		<img class ='ltb' src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/manitou/pt/market/3-industry'></img>
+		<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/Home.aspx'></img>
 		<span> - Outros modelos disponiveis</span>
 	<div>
 	<p/>
 
 	<ul id='slideMaq'>
-		<li class ='ltp' link='/maquina/MI-25'>
-			<img class='machine' src='/img/machines/MI-25.30.35-small.png'/>
-			<span>MI 25/30/35</span>
+		<li class ='ltp' link='/maquina/Must-2041'>
+			<img class='machine' src='/img/machines/Must-2041-small.png'/>
+			<span>Skid Steer Loader 2041</span>
 		</li>
-		<li class ='ltp' link='/maquina/MT-1235'>
-			<img class='machine' src='/img/machines/MT-1235-small.jpg'/>
-			<span>MT 1235</span>
-		</li>
-		<li class ='ltp' link='/maquina/MT-1440'>
-			<img class='machine' src='/img/machines/MT-1440.1740-small.png'/>
-			<span>MT 1440</span>
+		<li class ='ltp' link='/maquina/Must-2056'>
+			<img class='machine' src='/img/machines/Must-2056-small.png'/>
+			<span>Skid Steer Loader 2056</span>
 		</li>
 	</ul>
 	<script type="text/javascript">
