--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,8 +1,17 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
+html{
+ background: #000000 url('/img/background.jpg') no-repeat bottom left;
+ background-size: 100% 100%;
+ width: 100%;
+ height:100%;
+ height: auto !important;
+ min-height:100%;
+}
 
 div#container{
   width: 1000px;
+  height: 700px;
   margin-left:auto;
   margin-right:auto;
 }
