[ADDED] Compair, SillaItaly and Galtrailer products (not all) and sillaitaly products page

--- a/views/brand/sillaitaly.html
+++ b/views/brand/sillaitaly.html
@@ -17,25 +17,13 @@
 	<p/>
 
 	<ul id='slideMaq'>
-		<li class ='ltp' link='/maquina/MI-25'>
-			<img class='machine' src='/img/machines/MI-25.30.35-small.png'/>
-			<span>MI 25/30/35</span>
+		<li class ='ltp' link='/maquina/DB-3000'>
+			<img class='machine' src='/img/machines/DB-3000-small.jpg'/>
+			<span>DB 3000</span>
 		</li>
-		<li class ='ltp' link='/maquina/MT-1235'>
-			<img class='machine' src='/img/machines/MT-1235-small.jpg'/>
-			<span>MT 1235</span>
-		</li>
-		<li class ='ltp' link='/maquina/MT-1440'>
-			<img class='machine' src='/img/machines/MT-1440.1740-small.png'/>
-			<span>MT 1440</span>
-		</li>
-		<li class ='ltp' link='/maquina/160-ATJ'>
-			<img class='machine' src='/img/machines/160-ATJ-small.png'/>
-			<span>160 ATJ</span>
-		</li>
-		<li class ='ltp' link='/maquina/120-SE'>
-			<img class='machine' src='/img/machines/120-SE-small.png'/>
-			<span>120 SE</span>
+		<li class ='ltp' link='/maquina/DB-4000'>
+			<img class='machine' src='/img/machines/DB-4000-small.jpg'/>
+			<span>DB 4000</span>
 		</li>
 	</ul>
 	<script type="text/javascript">
