--- a/views/_layout.html
+++ b/views/_layout.html
@@ -79,6 +79,7 @@
 				   		<li><a href='/marca/compair'><span>Compair</span></a></li>
 				   		<li><a href='/marca/fassi'><span>Fassi</span></a></li>
 				   		<li><a href='/marca/mustang'><span>Mustang</span></a></li>
+				   		<li><a href='/marca/sillaitaly'><span>Silla Italy</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='#'><span>Aluguer</span></a></li>
