[MODIFIED] Dados e imagens modificados segundo os dados recebidos do cliente

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -39,7 +39,7 @@
 				<img class ='ltb' src='/img/partners/fassi.jpg' link='http://www.fassi.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/galtrailer.png' link='http://www.galtrailer.pt/'></img>
+				<img class ='ltb' src='/img/partners/galtrailer.jpg' link='http://www.galtrailer.pt/'></img>
 			</li>
 			<li>
 				<img class ='ltb' src='/img/partners/silla.jpg' link='http://www.sillaitaly.com/'></img>
