--- a/views/brand/Jungheinrich.html
+++ b/views/brand/Jungheinrich.html
@@ -26,7 +26,7 @@
 			<span>ETV 216</span>
 		</li>
 		<li class ='ltp' link='/maquina/EJE-120'>
-			<img class='machine' src='/img/machines/EJE-120-small.jpg'/>
+			<img class='machine' src='/img/machines/EJE-120-small.png'/>
 			<span>EJE 120</span>
 		</li>
 		<li class ='ltp' link='/maquina/AM-22'>
