--- a/views/brand/sillaitaly.html
+++ b/views/brand/sillaitaly.html
@@ -18,11 +18,11 @@
 
 	<ul id='slideMaq'>
 		<li class ='ltp' link='/maquina/DB-3000'>
-			<img class='machine' src='/img/machines/DB-3000-small.jpg'/>
+			<img class='machine' src='/img/machines/DB-3000-small.png'/>
 			<span>DB 3000</span>
 		</li>
 		<li class ='ltp' link='/maquina/DB-4000'>
-			<img class='machine' src='/img/machines/DB-4000-small.jpg'/>
+			<img class='machine' src='/img/machines/DB-4000-small.png'/>
 			<span>DB 4000</span>
 		</li>
 	</ul>
