--- a/views/machine/DB-3000.html
+++ b/views/machine/DB-3000.html
@@ -11,21 +11,27 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1><span class='ltb' link='http://www.sillaitaly.com/prodotto.asp?id=31'>Nome</span></h1>
+        	<h1><span class='ltb' link='http://www.sillaitaly.com/prodotto.asp?id=31'>DB 3000</span></h1>
         	<h2>Misturador</h2>
         	<p/>
         	<table id='info'>
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Cuba</th>
-                        <th>Combustivel</th>
+        				<th>Capacidade tambor</th>
+                        <th>Capacidade produção</th>
+                        <th>Peso em vazio</th>
+                        <th>Comprimento</th>
+                        <th>Altura</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-                        <td>3 m&sup3</td>
-        				<td>Diesel</td>
+                        <td>3.000 lts</td>
+        				<td>2.400 lts</td>
+                        <td>5.600 kg</td>
+                        <td>5.300 mm</td>
+                        <td>3.200 m</td>
         			</tr>
         		</tbody>
         	</table>
