--- a/views/machine/Gal-B2.html
+++ b/views/machine/Gal-B2.html
@@ -18,16 +18,18 @@
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Comprimento total</th>
-                        <th>Comprimento plat. rebaixada</th>
-        				<th>Tara</th>
+        				<th>Capacidade</th>
+                        <th>Comprimento</th>
+        				<th>Eixos</th>
+                        <th>Pneus</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-                        <td>12,795 m</td>
-        				<td>9,27 m</td>
-        				<td>12100 kg</td>
+                        <td>18 a 22 m</td>
+        				<td>7,485 m</td>
+        				<td>2 un</td>
+                        <td>315/80 x 22,5</td>
         			</tr>
         		</tbody>
         	</table>
