--- a/views/machine/Gal-PM3.html
+++ b/views/machine/Gal-PM3.html
@@ -18,16 +18,18 @@
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Comprimento total</th>
-                        <th>Comprimento plat. rebaixada</th>
-        				<th>Tara</th>
+        				<th>Comprimento estrado</th>
+                        <th>Eixos</th>
+        				<th>Rampas hidráulicas</th>
+                        <th>Desloc. lateral rampas</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-                        <td>12,795 m</td>
-        				<td>9,27 m</td>
-        				<td>12100 kg</td>
+                        <td>9,130 m</td>
+        				<td>3 un x 12t</td>
+        				<td>2 un</td>
+                        <td>3 m</td>
         			</tr>
         		</tbody>
         	</table>
