--- a/views/machine/DB-4000.html
+++ b/views/machine/DB-4000.html
@@ -18,14 +18,20 @@
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Cuba</th>
-                        <th>Combustivel</th>
+        				<th>Capacidade tambor</th>
+                        <th>Capacidade produção</th>
+                        <th>Peso em vazio</th>
+                        <th>Comprimento</th>
+                        <th>Altura</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-                        <td>4 m&sup3</td>
-        				<td>Diesel</td>
+                        <td>4.000 lts</td>
+                        <td>3.000 lts</td>
+                        <td>6.000 kg</td>
+                        <td>5.300 mm</td>
+                        <td>3.750 m</td>
         			</tr>
         		</tbody>
         	</table>
