[ADDED] data and photos of machine MT 1235

--- a/views/machine/MT-1235.html
+++ b/views/machine/MT-1235.html
@@ -5,10 +5,47 @@
     @{head('<meta charset="utf-8" />')}
     @{head('<meta http-equiv="X-UA-Compatible" content="IE=10" />')}
     @{head('<meta name="format-detection" content="telephone=no"/>')}
+@{head('<link rel="stylesheet" href="/css/maquinas.css"/>')}
+    @{head('<script src="/js/slider.js"></script>')}
 </head>
 <body>
-
-        Empilhadora
+	<div id='intro'>
+        <div id='left'>
+        	<h1>MT-1235</h1>
+        	<h2>Empilhador Telescópico</h2>
+        	<p/>
+        	<table id='info'>
+        		<caption>Informações Técnicas</caption>
+        		<thead>
+        			<tr>
+        				<th>Capacidade de Elevação</th>
+        				<th>Altura de Elevação</th>
+        				<th>Combustível</th>
+        			</tr>
+        		</thead>
+        		<tbody>	
+        			<tr>
+        				<td>3.500 kg</td>
+        				<td>12 m</td>
+        				<td>Diesel</td>
+        			</tr>
+        		</tbody>
+        	</table>
+        </div>
+        <div id ='right'>
+        	<div id="slider">
+			<div id="nav">
+				<button id="previous">Previous</button>
+				<button id="next">Next</button>
+			</div>
+			<div id="toShow">
+				<img class="sp" src="/img/machines/MT-1235-1.jpg"/>
+				<img class="sp" src="/img/machines/MT-1235-2.jpg"/>
+				<img class="sp" src="/img/machines/MT-1235-3.jpg"/>
+				<img class="sp" src="/img/machines/MT-1235-4.jpg"/>
+			</div>
+		</div>
+    </div>
 
 
 </body>
