[MODIFIED] Images of partners processed\n[MODIFIED] info window of contacts map always showing

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,12 +1,21 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 html{
- background: #000000 url('/img/background.jpg') no-repeat bottom left;
+ /*background: #000000 url('/img/background.jpg') no-repeat bottom left;
  background-size: 100% 100%;
  width: 100%;
  height:100%;
  height: auto !important;
- min-height:100%;
+ min-height:100%;*/
+
+background: rgb(183,183,183); /* Old browsers */
+background: -moz-linear-gradient(left, rgba(183,183,183,1) 0%, rgba(255,255,255,1) 49%, rgba(183,183,183,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(183,183,183,1)), color-stop(49%,rgba(255,255,255,1)), color-stop(100%,rgba(183,183,183,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left, rgba(183,183,183,1) 0%,rgba(255,255,255,1) 49%,rgba(183,183,183,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left, rgba(183,183,183,1) 0%,rgba(255,255,255,1) 49%,rgba(183,183,183,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left, rgba(183,183,183,1) 0%,rgba(255,255,255,1) 49%,rgba(183,183,183,1) 100%); /* IE10+ */
+background: linear-gradient(to right, rgba(183,183,183,1) 0%,rgba(255,255,255,1) 49%,rgba(183,183,183,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b7b7b7', endColorstr='#b7b7b7',GradientType=1 ); /* IE6-9 */
 }
 
 div#container{
@@ -26,7 +35,7 @@ div#container{
 }*/
 img#comp{
   position: absolute;
-  background-color: white;
+  height: 70px;
 }
 
 /* Base Styles */
