--- a/views/_layout.html
+++ b/views/_layout.html
@@ -21,28 +21,28 @@
 	<div id='container'>
 		<ul id='partners' style="display:none">
 			<li>
-				<img class ='ltb' src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/'></img>
+				<img class ='ltb' src='/img/partners/manitou.png' link='http://www.pt.manitou.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/ammann.jpg' link='http://www.ammann-group.com/'></img>
+				<img class ='ltb' src='/img/partners/ammann.png' link='http://www.ammann-group.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/jungheinrich.jpg' link='http://www.jungheinrich.com/'></img>
+				<img class ='ltb' src='/img/partners/jungheinrich.png' link='http://www.jungheinrich.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/kalmar.jpg' link='http://www.cargotec.com/'></img>
+				<img class ='ltb' src='/img/partners/kalmar.png' link='http://www.cargotec.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/compair.jpg' link='http://www.compair.pt/'></img>
+				<img class ='ltb' src='/img/partners/compair.png' link='http://www.compair.pt/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/fassi.jpg' link='http://www.fassi.com/'></img>
+				<img class ='ltb' src='/img/partners/fassi.png' link='http://www.fassi.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/galtrailer.jpg' link='http://www.galtrailer.pt/'></img>
+				<img class ='ltb' src='/img/partners/galtrailer.png' link='http://www.galtrailer.pt/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/silla.jpg' link='http://www.sillaitaly.com/'></img>
+				<img class ='ltb' src='/img/partners/silla.png' link='http://www.sillaitaly.com/'></img>
 			</li>
 			<li>
 				<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/'></img>
