--- a/views/_layout.html
+++ b/views/_layout.html
@@ -82,9 +82,9 @@
 				   		<li><a href='/marca/sillaitaly'><span>Silla Italy</span></a></li>
 				   	</ul>
 				   </li>
-				   <li><a href='#'><span>Aluguer</span></a></li>
-				   <li><a href='#'><span>Assistência</span></a></li>
-				   <li><a href='#'><span>Peças</span></a></li>
+				   <li><a href='/aluguer'><span>Aluguer</span></a></li>
+				   <li><a href='/assistencia'><span>Assistência</span></a></li>
+				   <li><a href='/pecas'><span>Peças</span></a></li>
 				   <li class='last'><a href='/contactos'><span>Contactos</span></a></li>
 				</ul>
 			</div>
