[MODIFIED] translated text of assistencia.html and images extentions corrected in Jungheinrich.html and sillaitaly.html in brands folder

--- a/views/assistencia.html
+++ b/views/assistencia.html
@@ -19,7 +19,9 @@
 			<div id='right'>
 				<h3>English</h3>
 				<p>
-				MAQMAN sells a variety of machinery for Construction and Cargo handling equipment. We are continuously receiving machinery, equipment's and accessories from the different manufacturers and rotating our new machinery stock.
+				We are a team of specialized tecnicals.<br>
+				We move our workshop to your machine.<br>
+				We (garantimos) the best attention over your machine's health.<br> We give you a bigger working time to use more and better your machine.
 				</p>
 			</div>
 		</div>
