--- a/views/brand/Jungheinrich.html
+++ b/views/brand/Jungheinrich.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div>
-		<img class ='ltb' src='/img/partners/jungheinrich.jpg' link='http://www.jungheinrich.com/'></img>
+		<img class ='ltb' src='/img/partners/jungheinrich.png' link='http://www.jungheinrich.com/'></img>
 		<span> - Outros modelos disponiveis</span>
 	<div>
 	<p/>
