--- a/views/brand/sillaitaly.html
+++ b/views/brand/sillaitaly.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div>
-		<img class ='ltb' src='/img/partners/manitou.jpg' link='http://www.pt.manitou.com/manitou/pt/market/3-industry'></img>
+		<img class ='ltb' src='/img/partners/silla.png' link='http://www.sillaitaly.com/'></img>
 		<span> - Outros modelos disponiveis</span>
 	<div>
 	<p/>
