[MODIFIED] images to 395px and added to the brand menu Galtrailer link

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -80,6 +80,7 @@
 				   		<li><a href='/marca/fassi'><span>Fassi</span></a></li>
 				   		<li><a href='/marca/mustang'><span>Mustang</span></a></li>
 				   		<li><a href='/marca/sillaitaly'><span>Silla Italy</span></a></li>
+				   		<li><a href='/marca/galtrailer'><span>Galtrailer</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='/aluguer'><span>Aluguer</span></a></li>
