--- a/views/assistencia.html
+++ b/views/assistencia.html
@@ -19,7 +19,7 @@
 			<div id='right'>
 				<h3>English</h3>
 				<p>
-				We are a team of specialized tecnicals.<br>
+				We are a team of specialized technicals.<br>
 				We move our workshop to your machine.<br>
 				We (garantimos) the best attention over your machine's health.<br> We give you a bigger working time to use more and better your machine.
 				</p>
