[MODIFIED] nodejitsu deploy file(package.json) and machine photos [BUGFIXED] brands on top slider onclick event to a _blank fixed

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -61,6 +61,7 @@
 		        autoPlaySpeed: 3000,            
 		        pauseOnHover: true
 			});
+			$('.ltb').click(imgGoToBlank);
 		});
 	</script>
 
