[SETIMAGES]Images ajustments

--- a/views/brand/manitou.html
+++ b/views/brand/manitou.html
@@ -22,7 +22,7 @@
 			<span>MI 25/30/35</span>
 		</li>
 		<li class ='ltp' link='/maquina/MT-1235'>
-			<img class='machine' src='/img/machines/MT-1235-small.jpg'/>
+			<img class='machine' src='/img/machines/MT-1235-small.png'/>
 			<span>MT 1235</span>
 		</li>
 		<li class ='ltp' link='/maquina/MT-1440'>
