[BUGSOLVED] Selection not enable, this way doesn't show the blue selection color and cant select anything

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -16,6 +16,8 @@ background: -o-linear-gradient(left, rgba(183,183,183,1) 0%,rgba(255,255,255,1) 
 background: -ms-linear-gradient(left, rgba(183,183,183,1) 0%,rgba(255,255,255,1) 49%,rgba(183,183,183,1) 100%); /* IE10+ */
 background: linear-gradient(to right, rgba(183,183,183,1) 0%,rgba(255,255,255,1) 49%,rgba(183,183,183,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b7b7b7', endColorstr='#b7b7b7',GradientType=1 ); /* IE6-9 */
+-webkit-user-select: none;
+-moz-user-select: none;
 }
 
 div#container{
