--- a/views/brand/galtrailer.html
+++ b/views/brand/galtrailer.html
@@ -17,17 +17,13 @@
 	<p/>
 
 	<ul id='slideMaq'>
-		<li class ='ltp' link='/maquina/MI-25'>
-			<img class='machine' src='/img/machines/MI-25.30.35-small.png'/>
+		<li class ='ltp' link='/maquina/gal-b2'>
+			<img class='machine' src='/img/machines/Gal-B2-small.png'/>
+			<span>Basculante 2 eixos</span>
+		</li>
+		<li class ='ltp' link='/maquina/gal-pm3'>
+			<img class='machine' src='/img/machines/Gal-PM3-small.png'/>
 			<span>Porta Máquinas 3 eixos</span>
-		</li>
-		<li class ='ltp' link='/maquina/MT-1235'>
-			<img class='machine' src='/img/machines/MT-1235-small.jpg'/>
-			<span>MT 1235</span>
-		</li>
-		<li class ='ltp' link='/maquina/MT-1440'>
-			<img class='machine' src='/img/machines/MT-1440.1740-small.png'/>
-			<span>MT 1440</span>
 		</li>
 	</ul>
 	<script type="text/javascript">
