[ADDED] Login for doing the news

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -8,6 +8,10 @@
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type='text/javascript' src="/js/newsReader.js"></script>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+	<meta name='description' content='
+	A MAQMAN é uma empresa de direito angolano, no âmbito dos seus Estatutos,fundada em Outubro de 2010, tendo uma forma de sociedade comercial por quotas, de responsabilidade limitada.
+				 
+	A nossa MISSÃO é fornecer soluções para a movimentação de cargas e pessoas bem como equipamento para apoiar as actividades industriais, com especial incidência nos sectores da Distribuição, Construção Civil e Obras Públicas, cuja qualidade e garantia acrescentem valor aos projectos em que intervém.'/>
 	<link rel='shortcut icon' href='/img/favicon.ico' type='image/x-icon'>
 	<link rel='icon' href='/img/favicon.ico' type='image/x-icon'>
 	<title>MAQMAN</title>
@@ -71,6 +75,7 @@
 			</a>
 			<div id='cssmenu'>
 				<ul>
+					<li><a href='/quemsomos'><span>Quem Somos</span></a></li>
 				   <li><a href='/vendas'><span>Vendas</span></a>
 				   	<ul>
 				   		<li><a href='/marca/manitou'><span>Manitou</span></a></li>
