[ADDED] Sumitomo brand and machines html(missing data and images)

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -51,6 +51,9 @@
 			<li>
 				<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/'></img>
 			</li>
+			<li>
+				<img class ='ltb' src='/img/partners/sumitomo.gif' link='http://www.sumitomokenki.com/'></img>
+			</li>
 		</ul>
 
 	<script type="text/javascript">
@@ -87,6 +90,7 @@
 				   		<li><a href='/marca/mustang'><span>Mustang</span></a></li>
 				   		<li><a href='/marca/sillaitaly'><span>Silla Italy</span></a></li>
 				   		<li><a href='/marca/galtrailer'><span>Galtrailer</span></a></li>
+				   		<li><a href='/marca/sumitomo'><span>Sumitomo</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='/aluguer'><span>Aluguer</span></a></li>
