Added files edited by João Meira and changed code

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -52,7 +52,7 @@
 				<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/sumitomo.gif' link='http://www.sumitomokenki.com/'></img>
+				<img class ='ltb' src='/img/partners/sumitomo.png' link='http://www.sumitomokenki.com/'></img>
 			</li>
 		</ul>
 
