--- a/views/brand/sumitomo.html
+++ b/views/brand/sumitomo.html
@@ -11,22 +11,22 @@
 <body>
 
 	<div>
-		<img class ='ltb' src='/img/partners/sumitomo.gif' link='http://www.sumitomokenki.com/'></img>
+		<img class ='ltb' src='/img/partners/sumitomo.png' link='http://www.sumitomokenki.com/'></img>
 		<span> - Outros modelos disponiveis</span>
 	<div>
 	<p/>
 
 	<ul id='slideMaq'>
 		<li class ='ltp' link='/maquina/SH210-5'>
-			<img class='machine' src='/img/machines/SH210-5-1.jpg'/>
+			<img class='machine' src='/img/machines/SH210-5-1.png'/>
 			<span>SH210-5</span>
 		</li>
 		<li class ='ltp' link='/maquina/SH300-5'>
-			<img class='machine' src='/img/machines/SH300-5-1.jpg'/>
+			<img class='machine' src='/img/machines/SH300-5-1.png'/>
 			<span>SH300-5</span>
 		</li>
 		<li class ='ltp' link='/maquina/SH350HD-5'>
-			<img class='machine' src='/img/machines/SH350HD-5-1.jpg'/>
+			<img class='machine' src='/img/machines/SH350HD-5-1.png'/>
 			<span>SH350HD-5</span>
 		</li>
 	</ul>
