--- a/public/css/maquinas.css
+++ b/public/css/maquinas.css
@@ -21,12 +21,12 @@ div#left{
 	margin-left: 40%;
 }
 
-h1{
+div#left h1{
 	font-weight: 700;
 	font-size: 40px;
 	margin: 0px;
 }
-h2{
+div#left h2{
 	margin-top: 0px;
 	color:#FE0000;
 }
